# RAG_Ollama_Mac

./: .gitignore  .justfile  README.md  pyproject.toml
docs/: conversion_to_marimo.md  rag_evaluation.md
scripts/: update_pdf_file_names.py
src/: UI.py  embedding.py  load_docs.py  load_docs_mps.py  marimo_ui.py  rag_query.py  requirements.txt  settings.toml
