[project]
name = "rag-ollama-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain-community>=0.3.29",
    "langchain>=0.3.27",
    "marimo>=0.15.2",
    "streamlit>=1.49.1",
    "langchain-chroma>=0.2.5",
    "langchain-ollama>=0.3.7",
    "pypdf>=6.0.0",
]

[dependency-groups]
dev = [
    "googletrans>=4.0.2",
    "ipykernel>=6.30.1",
    "langdetect>=1.0.9",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "textual>=6.1.0",
]
